Added pipes & services

--- a/src/app/binding/binding.component.html
+++ b/src/app/binding/binding.component.html
@@ -24,3 +24,9 @@
 .ts:
 public greeting = "";
 -->
+
+<!--Employee Service Binding-->
+
+<div *ngFor="let employee of employees">
+    {{employee.name}},{{employee.id}},{{employee.age}}
+</div>
