Added http & observables

--- a/src/app/binding/binding.component.html
+++ b/src/app/binding/binding.component.html
@@ -1,4 +1,5 @@
 <p>binding works!</p>
+<h1>{{errorMsg}}</h1>
 <!--Template reference variables-->
 <input #myInput type="text" />
 <button (click)=LogMessage(myInput.value)>Log</button>
