--- a/src/app/directives/directives.component.html
+++ b/src/app/directives/directives.component.html
@@ -29,7 +29,7 @@ Content to render when condition is false.
 
 <p>directives works!</p>
 
-
+<h1>{{errorMsg}}</h1>
 <button (click)="show = !show">{{show ? 'hide' : 'show'}}</button> show = {{show}}
 <!--Event binding example -->
 <br>
