--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,8 @@
 <input type="button" [disabled]="isDisabled" value="Submit" />
 <nav>
     <a routerLink="/directives" routerLinkActive="active">Directives</a><br>
-    <a routerLink="/bindings" routerLinkActive="active">Bindings</a>
+    <a routerLink="/bindings" routerLinkActive="active">Bindings</a><br>
+    <a routerLink="/departments" routerLinkActive="active">Department</a>
 </nav>
 
 <!-- app-directives component wii be bind -->
