Added Parammap,Optumal route,RelativeNavigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 <nav>
     <a routerLink="/directives" routerLinkActive="active">Directives</a><br>
     <a routerLink="/bindings" routerLinkActive="active">Bindings</a><br>
-    <a routerLink="/departments" routerLinkActive="active">Department</a>
+    <a routerLink="/departments-list" routerLinkActive="active">Department</a>
 </nav>
 
 <!-- app-directives component wii be bind -->
