--- a/src/app/department-detail/department-detail.component.html
+++ b/src/app/department-detail/department-detail.component.html
@@ -1,3 +1,11 @@
 <p>department-detail works!</p>
 
 <h4>you have selected department id {{departmentId}}</h4>
+
+<a (click)="goPrevious()">Previous</a>
+<div></div>
+<a (click)="goNext()">Next</a>
+
+
+
+<button (click)="goToDepartmentDetails()">Back</button>
