Angular new features & forms html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,3 +20,5 @@
 <router-outlet></router-outlet>
 <app-component-interaction (childEvent)="message=$event" [parentData]=" 'Kiran' "></app-component-interaction>
 <h1>{{message}}</h1>
+
+<app-ang-forms></app-ang-forms>
