--- a/src/app/ang-forms/ang-forms.component.html
+++ b/src/app/ang-forms/ang-forms.component.html
@@ -4,25 +4,49 @@
 
 <div class="container-fluid">
     <h1>Bootcamp Enrollment form</h1>
-    <form>
+
+    <!-- If ngModel is used within a form tag, either the name attribute must be set or the form
+      control must be defined as 'standalone' in ngModelOptions.
+ -->
+    <form #userForm="ngForm"> {{userForm.value| json}}
+        <hr/> {{userModel | json}}
         <div class="form-group">
             <label>Name</label>
-            <input type="text" class="form-control">
+            <!-- proprty data binding 1 way dbinding[]  [ngModel]="userModel.name"-->
+            <input type="text" class="form-control" name="userName" [(ngModel)]="userModel.name">
         </div>
+        <!-- <div ngModelGroup="address">
+            <div class="form-group">
+                <label>street</label>
+                <input type="text" class="form-control" name="street" ngModel>
 
-        <div class="form-group">
-            <label>Email</label>
-            <input type="email" class="form-control">
-        </div>
+            </div>
 
+            <div class="form-group">
+                <label>city</label>
+                <input type="text" class="form-control" name="city" ngModel>
+
+            </div>
+            <div class="form-group">
+                <label>state</label>
+                <input type="text" class="form-control" name="state" ngModel>
+
+            </div>
+            <div class="form-group">
+                <label>Pincode</label>
+                <input type="text" class="form-control" name="pincode" ngModel>
+            </div> 
+
+</div>-->
         <div class="form-group">
             <label>Phone</label>
-            <input type="tel" class="form-control">
+            <input type="tel" class="form-control" name="Phone" ngModel>
+
         </div>
 
         <div class="form-group">
-            <select name="" id="" class="custom-select">
-                <option selected>Im Intresed</option>
+            <select name="" id="" class="custom-select" name="topic" [(ngModel)]="userModel.topic">
+                <option selected value="">Im Intresed</option>
                 <option *ngFor = "let topic of topics">{{topic}}</option>
             </select>
         </div>
@@ -30,16 +54,17 @@
         <div class="mb-3">
             <label>Time Prefrence</label>
             <div class="form-check">
-                <input type="radio" class="form-check-input" name="timePrefrence" value="morning">
+                <input type="radio" class="form-check-input" name="timePrefrence" value="morning" ngModel>
                 <label class="form-check-label">Morning (9AM - 12PM)</label>
             </div>
         </div>
         <div class="form-check">
-            <input type="radio" class="form-check-input" name="timePrefrence" value="evening">
+            <input type="radio" class="form-check-input" name="timePrefrence" value="evening" ngModel>
             <label class="form-check-label">Evening (5PM - 8PM)</label>
         </div>
         <div class="form-check mb-3">
-            <input type="checkbox" class="form-check-input">
+            <input type="checkbox" class="form-check-input" name="subscribe" ngModel>
+
             <label class="form-check-label">Send me promotional offers</label>
         </div>
     </form>
