--- a/src/app/ang-forms/ang-forms.component.html
+++ b/src/app/ang-forms/ang-forms.component.html
@@ -5,6 +5,8 @@
 <div class="container-fluid">
     <h1>Bootcamp Enrollment form</h1>
 
+    <!-- ngModel for tracking form elements & name prop must be there if we use ngModel
+#name= "ngModel" >> points to reference of ngModel props -->
     <!-- If ngModel is used within a form tag, either the name attribute must be set or the form
       control must be defined as 'standalone' in ngModelOptions.
  -->
@@ -12,9 +14,16 @@
         <hr/> {{userModel | json}}
         <div class="form-group">
             <label>Name</label>
-            <!-- proprty data binding 1 way dbinding[]  [ngModel]="userModel.name"-->
-            <input type="text" class="form-control" #name #nameModel="ngModel" required name="userName" [(ngModel)]="userModel.name">
+            <!-- proprty data binding 1 way dbinding[]  [ngModel]="userModel.name" 
+            currenyly class.invalid is not working
+            pattern="^\d{10}$" for phone pattern validation -->
+            <input type="text" [class.is-invalid]="name.invalid && name.touched" class="form-control" #name #nameModel="ngModel" required name="ngModel" [(ngModel)]="userModel.name">
+            <small class="text-danger" [class.d-none]="name.valid || name.untouched">Name is required</small>
+
+
         </div>
+
+        <!--[class.is-invalid]="name.invalid" -->
         {{name.className}} {{nameModel.untouched}}
         <!-- <div ngModelGroup="address">
             <div class="form-group">
@@ -41,18 +50,22 @@
 </div>-->
         <div class="form-group">
             <label>Phone</label>
-            <input type="tel" class="form-control" name="Phone" ngModel>
-
+            <input type="tel" name="phone" required #phone="ngModel" pattern="^\d{10}$" [class.is-invlaid]="phone.invalid && phone.touched" class="form-control" ngModel>
+            <div *ngIf="phone.errors && (phone.invalid || phone.required)">
+                <small class="text-danger " *ngIf="phone.errors.required ">phone number is required</small>
+                <small class="text-danger " *ngIf="phone.errors.pattern ">phone number must be at least 10 digits</small>
+            </div>
         </div>
 
-        <div class="form-group">
-            <select name="" id="" class="custom-select" name="topic" [(ngModel)]="userModel.topic">
-                <option selected value="">Im Intresed</option>
-                <option *ngFor = "let topic of topics">{{topic}}</option>
+        <div class="form-group ">
+            <select (blur)="validateTopic(topic.value)" (change)="validateTopic(topic.value)" #topic="ngModel" [class.is-invalid]="topicHasError && topic.touched" name=" " id=" " class="custom-select " name="topic " [(ngModel)]="userModel.topic ">
+                <option selected value="default">Im Intresed</option>
+                <option *ngFor = "let topic of topics ">{{topic}}</option>
             </select>
+            <small class="text-danger" [class.d-none]="!topicHasError || topic.untouched">Please select valid topic</small>
         </div>
 
-        <div class="mb-3">
+        <div class="mb-3 ">
             <label>Time Prefrence</label>
             <div class="form-check">
                 <input type="radio" class="form-check-input" name="timePrefrence" value="morning" ngModel>
@@ -65,7 +78,6 @@
         </div>
         <div class="form-check mb-3">
             <input type="checkbox" class="form-check-input" name="subscribe" ngModel>
-
             <label class="form-check-label">Send me promotional offers</label>
         </div>
     </form>
