Added navigation bar & Routing

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,16 @@
-<form [formGroup]="contactForm" (ngSubmit)="onSubmit()" novalidate>
-    <div formGroupName="personalData" novalidate>
-      <input formControlName="email" /> <input formControlName="mobile" />
+<form [formGroup]="contactForm" (ngSubmit)="onSubmit()" > 
+    <!-- novalidate -->
+    <div formGroupName="personalData" >
+            <!-- novalidate -->
+      <input formControlName="email" /> 
+      <!-- Reactive forms validation for showing error msgs to be done -->
+      <!-- <input formControlName="mobile" /> -->
+      <!-- Mobile: <input formControlName="mobile" name=phone #mobile mobile  ="ngModel"/> -->
+  <!-- <span *ngIf="(mobile.dirty || mobile.touched) && mobile.invalid && mobile.errors.required">
+    Mobile is required.
+  </span>-->
+   
+  <br>
       <select formControlName="country">
         <option *ngFor="let country of countries" [value]="country"
           >{{country}}</option
@@ -13,7 +23,9 @@
       >
     </select>
     <input formControlName="text" />
-    <button type="submit" [disabled]="contactForm.pristine">Save</button>
+    <button type="submit" [disabled]="!contactForm.valid">Save</button>
+
+    <!-- contactForm.pristine -->
     <button type="reset" (click)="revert()" [disabled]="contactForm.pristine">
       Revert
     </button>
