--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,31 @@
 <p>welcome</p>
-<!-- Property Binding -->
-<div>
-    <img [src]="imgUrl" />
+<div><nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">ANG</a>
+          </div>
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="/home">Home</a></li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">AngForms
+              <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="/AngTDF">TdF</a></li>
+                <li><a href="/AngReactiveForms">Reactive</a></li>
+                <li><a href="#">Page 1-3</a></li>
+              </ul>
+            </li>
+            <li><a href="/directives">Directives</a></li>
+            <li><a href="/bindings">Bindings</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
 
-</div>
-
-<input type="button" [disabled]="isDisabled" value="Submit" />
+    
 <nav>
-    <a routerLink="/directives" routerLinkActive="active">Directives</a><br>
-    <a routerLink="/bindings" routerLinkActive="active">Bindings</a><br>
+    <!-- <a routerLink="/directives" routerLinkActive="active">Directives</a><br> -->
+    <!-- <a routerLink="/bindings" routerLinkActive="active">Bindings</a><br> -->
     <a routerLink="/departments-list" routerLinkActive="active">Department</a>
 </nav>
 
@@ -20,6 +37,6 @@
 <router-outlet></router-outlet>
 <app-component-interaction (childEvent)="message=$event" [parentData]=" 'Kiran' "></app-component-interaction>
 <h1>{{message}}</h1>
-
-<app-ang-forms></app-ang-forms>
-<app-contact></app-contact>
+<!-- ang tdf & reactive forms  moved to routing from home -->
+<!-- <app-ang-forms></app-ang-forms> -->  
+<!-- <app-contact></app-contact> -->
