Modified AngForms Path

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,8 @@
 <nav>
     <a routerLink="/directives" routerLinkActive="active">Directives</a><br>
     <a routerLink="/bindings" routerLinkActive="active">Bindings</a><br>
-    <a routerLink="/departments-list" routerLinkActive="active">Department</a>
+    <a routerLink="/departments-list" routerLinkActive="active">Department</a><br>
+    <a routerLink="/ang-forms" routerLinkActive="active">AngForms</a>
 </nav>
 
 <!-- app-directives component wii be bind -->
@@ -21,4 +22,4 @@
 <app-component-interaction (childEvent)="message=$event" [parentData]=" 'Kiran' "></app-component-interaction>
 <h1>{{message}}</h1>
 
-<app-ang-forms></app-ang-forms>
+<!-- <app-ang-forms></app-ang-forms> -->  
